corrected banner and footer z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@
       text-align: center;
       color: #dddddd;
       font-size: 12px;
+      z-index: 2;
     }
     #profilepic {
       margin: 0px 30px 0px 0px;
@@ -103,7 +104,7 @@
       margin: 20px 20px 20px 20px;
       height: 200px;
       width: 200px;
-      z-index: 2;
+      z-index: 0;
     }
    
     #portbanner {
